name:                aztex-compiler
version:             0.1.0.0
synopsis:            Aztex to LaTeX compiler.
description:         Compiles Aztex typesetting front-end language to LaTeX. May support multiple backends in the future.
license:             BSD3
license-file:        LICENSE
author:              nelk
maintainer:          nelkishere@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable aztex
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
                     , parsec == 3.1.5
                     , HaTeX == 3.13.0.1
                     , text == 1.1.1.3
                     , containers == 0.5.0.0
                     , transformers == 0.4.1.0
                     , mtl == 2.2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
