name:                aztex-compiler
version:             0.2.0.0
synopsis:            Aztex to LaTeX compiler.
description:         Compiles Aztex typesetting front-end language to LaTeX. May support multiple backends in the future.
license:             BSD3
license-file:        LICENSE
author:              nelk
maintainer:          nelkishere@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:   base >=4.6 && <4.7
                 , parsec == 3.1.5
                 , HaTeX == 3.13.0.1
                 , text == 1.1.1.3
                 , containers == 0.5.0.0
                 , transformers == 0.4.1.0
                 , mtl == 2.2.1
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   Text.Aztex.Parser
                   , Text.Aztex.CodeGeneration
                   , Text.Aztex.Types
                   , Text.Aztex.Config
                   , Text.Aztex.Helpers
                   , Text.Aztex.Processing

executable aztex
  main-is:           src/Main.hs
  build-depends:   aztex-compiler
                 , base >=4.6 && <4.7
                 , containers == 0.5.0.0
                 , mtl == 2.2.1
                 , text == 1.1.1.3
  default-language:    Haskell2010


test-suite aztex_tests
  type:              exitcode-stdio-1.0
  build-depends:   aztex-compiler
                 , base >=4.5 && <4.7
                 , containers
                 , QuickCheck
                 , hspec >=1.9.0
                 , containers == 0.5.0.0
                 , mtl == 2.2.1
                 , HaTeX == 3.13.0.1
                 , text == 1.1.1.3
                 , raw-strings-qq
  hs-source-dirs:    test
  default-language:  Haskell2010
  main-is:           Spec.hs
