name:                aztex-compiler
version:             0.2.0.2
synopsis:            Aztex to LaTeX compiler.
description:         Compiles Aztex typesetting front-end language to LaTeX. May support multiple backends in the future.
license:             BSD3
license-file:        LICENSE
author:              nelk
maintainer:          nelkishere@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:   base >= 4.7
                 , parsec
                 , HaTeX
                 , text
                 , containers
                 , transformers
                 , mtl
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   Text.Aztex.Parser
                   , Text.Aztex.CodeGeneration
                   , Text.Aztex.Types
                   , Text.Aztex.Config
                   , Text.Aztex.Helpers
                   , Text.Aztex.Processing

executable aztex
  main-is:           src/Main.hs
  build-depends:   aztex-compiler
                 , base >= 4.7
                 , containers
                 , mtl
                 , text
  default-language:    Haskell2010


test-suite aztex_tests
  type:              exitcode-stdio-1.0
  build-depends:   aztex-compiler
                 , base >= 4.7
                 , containers
                 , QuickCheck
                 , hspec
                 , containers
                 , mtl
                 , HaTeX
                 , text
                 , raw-strings-qq
  hs-source-dirs:    test
  default-language:  Haskell2010
  main-is:           Spec.hs
